@@ -1,4 +1,7 @@
 
+2009-03-23 20:09 Ali aliov@xfce.org 
+	 * : Moved notification to the common code+added notification to the inhibit plugin
+
 2009-03-22 23:09 Ali aliov@xfce.org 
 	 * : Support cookies in the inhibit interface
 
